# Process this file with automake to produce Makefile.in
#
# Copyright (C) 2001, 2002 Rob Caelers & Raymond Penners
#
#
# $Id$
#

MAINTAINERCLEANFILES = Makefile.in

soundsdir = $(pkgdatadir)/sounds
sounds_DATA = $(wildcard *.wav)

soundeventsdir = $(sysconfdir)/sound/events
soundevents_DATA = workrave.soundlist

EXTRA_DIST = ${sounds_DATA} workrave.soundlist

